# In-Trip-with-Devin

./: .gitignore  MODELO_BANCO_DE_DADOS.md  Makefile  README.md  Ross26 In Trip Page Content -  - Sheet1.csv  prompt.txt  response.md  roadmap.md
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  test_whatsapp.py
backend/alembic/: env.py
backend/alembic/versions/: 20260407_0001_initial_schema.py  20260520_0002_add_role_and_staff_tables.py  20260521_0003_use_wetravel_trip_uuid.py  20260527_0004_add_service_agreement_url.py  20260602_0005_add_trip_settings.py  20260610_0006_move_service_agreement_to_trips.py  20260610_0007_add_ideal_pace_to_trip_settings.py  20260612_0008_add_trip_contacts.py  20260618_0009_add_trip_activity_id_to_staff_tasks.py  20260622_0010_add_activity_checkins.py  20260624_0011_add_activity_participants_and_scan_events.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: alembic_config.py  base.py  database.py  session.py
backend/app/middleware/: auth.py
backend/app/routers/: admin.py  auth.py  checklist.py  comments.py  health.py  missions.py  notifications.py  profile.py  staff.py  trip.py  users.py
backend/scripts/: add_test_user.py  create_staff_sheets.py  create_trip_sheets.py  gen_dev_users.py  import_staff_content.py  import_trip_content.py  reset_test_trip.py  reset_traveler_progress.py  reset_trip_content.py  seed_marcelo_test_user.py  seed_placeholder_trip.py  simulate_trip_day.py
backend/tests/: conftest.py  test_database_setup.py
(+221 files in other folders)
